<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pablo.myroutes.ClosedRouteFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewTimeEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="27dp"
            android:layout_marginTop="139dp"
            android:inputType="time"
            android:text="14:50"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewTimeStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="27dp"
            android:layout_marginTop="79dp"
            android:inputType="time"
            android:text="14:50"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewEndPointAddress"
            android:layout_width="216dp"
            android:layout_height="0dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="102dp"
            android:inputType="textMultiLine"
            android:text="Проспект Ломоносова, 183, к. 1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewRouteStatus" />

        <TextView
            android:id="@+id/textViewStartPointAddress"
            android:layout_width="216dp"
            android:layout_height="0dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="42dp"
            android:inputType="textMultiLine"
            android:text="Проспект Ломоносова, 183, к. 1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewRouteStatus" />

        <TextView
            android:id="@+id/textViewRouteStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="29dp"
            android:layout_marginTop="16dp"
            android:text="@string/route_closed"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="29dp" />

        <Button
            android:id="@+id/buttonCloseDay"
            android:layout_width="145dp"
            android:layout_height="120dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="12dp"
            android:text="@string/closeDay"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="145dp"
            android:layout_height="120dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="12dp"
            android:text="@string/new_route"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/textViewRouteTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="25 мин."
            android:textSize="24sp"
            android:layout_marginRight="42dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="65dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonCloseDay" />

        <TextView
            android:id="@+id/textViewRouteKilometrage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="25 км."
            android:textSize="24sp"
            android:layout_marginLeft="49dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginBottom="65dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonOk" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>
